--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
 
+body{
+    margin: 0;
+    padding: 0;
+}
+.header{
+    display: flex;
+    justify-content: space-between;
+}
 header{
 background-color: rgb(211, 211, 211);
 height: 80px;
