--- a/style.css
+++ b/style.css
@@ -1,30 +1,48 @@
 
-body{
+*{
     margin: 0;
     padding: 0;
 }
+
 .header{
-    display: flex;
-    justify-content: space-between;
-}
-header{
-background-color: rgb(211, 211, 211);
+background-color: rgb(223, 217, 217);
 height: 80px;
+width: 110%;
+/* position: fixed; */
+display:flex;
+flex-direction: row;
+align-items: center;
+justify-content:left;
+
+}
+.nav .a1{
+  margin-left: 60px;  
+
+}
+ a{
+    padding: 12px;
+    color:rgb(65, 64, 64) ;
+    font-weight: 100; 
+    letter-spacing: 2px; 
+    font-size: 13px;
+}
+.icon{
+    margin-left: 5%;
+    margin-top: 1%;
+}
+.icon a{
+    font-size: 20px;
+   
 }
 .container video{
 width: 100vw; 
-/* height: 30px; */
+
 }
 
 img{
 width: 135px;
 padding: 12px;
-}
-header{
-display: flex;
-flex-direction: column;
-justify-content: center;
-
+margin-left: 3%;
 }
 
 a{
@@ -42,8 +60,6 @@ width: 100vw;
 }
 
 .trend h1 ,h4,h2 {
-/* display: flex;
-flex-direction: column; */
 text-align: center;
 font-weight: 100;
 padding: 10px;
@@ -55,8 +71,6 @@ display: flex;
 margin-top: 2%;
 }
 .trend h1 {
-/* font-weight: 100;
-padding: 10px; */
 word-spacing: 10px;
 letter-spacing: 5px;
 text-decoration: underline;
@@ -65,7 +79,7 @@ text-decoration: underline;
     display: flex;
   /* column-gap: 4px; */
   margin-top: 25px;
-  /* overflow: hidden; */
+  margin-left: 15px;
 }
 .item img{
     width: 280px;
@@ -80,8 +94,11 @@ text-decoration: underline;
 .main{
     background-color: rgb(156, 115, 155);
     height: 500px;
+    width: 108%;
+    margin-top: 8%;
 }
 .main img{
+   
     width: 374px;
     margin: -11px 15%;
     /* height: 10px; */
@@ -90,13 +107,14 @@ text-decoration: underline;
 }
 .cont h4{
          text-decoration: underline;
-         margin-left: -25%;
+         margin-top: 15%;
+         margin-left: -18%;
          font-weight: 100;
          letter-spacing:4px;word-spacing: 1px;
 }
 .cont h3{
-    /* text-decoration: underline;
-    margin-left: -25%; */
+    /* text-decoration: underline; */
+    margin-left: -18%;
     font-size: 25px;
     font-weight: 100;
     letter-spacing:4px;
@@ -110,3 +128,20 @@ text-decoration: underline;
     letter-spacing:1px;
     word-spacing: 1px;
 }
+
+.a{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* margin-left: 2%; */
+    margin-top: -50px;
+    
+   }
+   .a .a1{
+    
+    font-size: 18px;
+    font-weight: 100;
+    /* padding-top: -80px; */
+    margin-top: -10%;
+   }
